--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,8 @@
     <title>Top-Staff - Кадровое агентство по трудоустройству в Польше</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/vacancies.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/legalization.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
@@ -25,10 +27,10 @@
                             <a class="nav-link" href="{{ url_for('main.about') }}">О нас</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('blog.index') }}">Вакансии</a>
+                            <a class="nav-link" href="{{ url_for('main.vacancies') }}">Вакансии</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('blog.index') }}">Легализация</a>
+                            <a class="nav-link" href="{{ url_for('main.legalization') }}">Легализация</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('blog.index') }}">Блог</a>
