--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -260,8 +260,9 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='120' height='40' viewBox='0 0 120 40'%3E%3Crect width='120' height='40' fill='%23007bff'/%3E%3Ctext x='60' y='25' font-family='Arial' font-size='16' font-weight='bold' text-anchor='middle' fill='white'%3ETop-Staff%3C/text%3E%3C/svg%3E" alt="Top-Staff Logo" height="40">
+                <a class="navbar-brand" href="{{ url_for('main.index') }}">
+                    <img src="{{ url_for('static', filename='img/logo.png', v='1.0.0') }}" alt="Top-Staff" class="logo-full">
+                    <!-- <img src="{{ url_for('static', filename='img/sygnet.jpeg', v='1.0.0') }}" alt="Top-Staff" class="logo-sygnet"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
@@ -269,13 +270,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">О нас</a>
+                            <a class="nav-link" href="{{ url_for('main.about') }}">О нас</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Вакансии</a>
+                            <a class="nav-link" href="{{ url_for('main.vacancies') }}">Вакансии</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Легализация</a>
+                            <a class="nav-link" href="{{ url_for('main.legalization') }}">Легализация</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('blog.index') }}">Блог</a>
